--- a/sass/layout/cardPrincipal.scss
+++ b/sass/layout/cardPrincipal.scss
@@ -38,7 +38,7 @@
       hsla(209, 100%, 60%, 0.65) 288deg,
       hsla(209, 100%, 60%, 0.95) 300deg,
       hsla(209, 100%, 60%, 0.65) 312deg,
-      hsla(209, 100%, 60%, 0.80) 328deg,
+      hsla(209, 100%, 60%, 0.8) 328deg,
       transparent 340deg,
       transparent 360deg
     );
@@ -254,7 +254,11 @@
 
   padding: 0.5rem 1rem;
   border-radius: 1rem;
-  background-image: linear-gradient(341deg, rgb(18 62 105), hsl(203deg 66.77% 45.89% / 97%));
+  background-image: linear-gradient(
+    341deg,
+    rgb(18 62 105),
+    hsl(203deg 66.77% 45.89% / 97%)
+  );
   background-color: rgb(18, 59, 107); // Fallback for dropdown expansion
   color: #ffffff;
   font-size: 1.5rem;
@@ -263,7 +267,8 @@
   border: 2px solid clr(secondary);
   outline: none;
   cursor: pointer;
-  box-shadow: inset 0 0 0.5rem 0.3rem rgba(0, 0, 0, 0.2), 0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 0.5rem 0.3rem rgba(0, 0, 0, 0.2),
+    0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
   appearance: none; // Remove default browser styling
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -273,8 +278,9 @@
     color: #ffffff !important;
     padding: 0.5rem;
     font-weight: 500;
-    
-    &:hover, &:checked {
+
+    &:hover,
+    &:checked {
       background-color: rgb(52, 118, 194) !important;
     }
   }
